--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background: #F5F5F5;
+	background: #fcf6e6;
 	scroll-behavior: smooth;
 
 }
@@ -22,9 +22,11 @@ a {
 }
 .pagecont {
 	display: flex;
+	animation: load-in 2.7s ease;
 }
 
 .menu {
+
 	flex:20%;
 	display: flex;
 	flex-direction: column;
@@ -243,6 +245,12 @@ a.txtover:hover #title {
 .next {
 	background-image: url(http://icons.iconarchive.com/icons/icons8/ios7/512/Weather-Partly-Cloudy-Night-icon.png);
 }
+
+@keyframes load-in {
+	from {opacity: 0}
+	to {opacity: 1}
+}
+
 
 @keyframes bounceAlpha {
   0% {opacity: 1; transform: translateX(0px) scale(1);}
