--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,13 @@ a.contact {
 	align-items: center;
 	max-width: 460px;
 	justify-content: center;
+
+	
+	flex-direction: row;
+	margin: 3%;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 a.txtover {
