--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,15 @@ a {
     margin-bottom:8px; 
 }
 
+ul {
+	list-style-type: circle;
+}
+
+ul.description_txt_1 {
+	list-style-type: circle;
+
+}
+
 /* structure */
 
 .pagecont {
@@ -59,6 +68,8 @@ a {
     max-width: 800px;
     width: 100%;
     margin-top: 4%; 
+
+	
 
 }
 
@@ -74,6 +85,8 @@ a {
 	align-items: center; 
 	justify-content: space-between;
 	margin: 1%;
+	top:-2%;
+	background-color: #fafafa;
 
 
 
@@ -86,6 +99,7 @@ a {
 	justify-content: flex-end;
 	flex-wrap: nowrap;
 	align-items: flex-end;
+	margin-top: 1%;
 
 }
 
@@ -102,7 +116,10 @@ a {
 	width: 100%;
 	display: flex;
 	background-color: #fafafa;
-	justify-content: space-around;		
+	justify-content: space-around;	
+
+
+
 }
 
 
@@ -342,7 +359,11 @@ canvas {
 .pageitem {
 	display: flex;
 	flex-direction: row;
-	
+
+}
+
+.carousel-control span.glyphicon {
+    color: blue;
 }
 
 a.txtover {
