--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ a {
 img {
 	margin-right: 3%;
 	margin-bottom: 3%;
+	object-fit: cover;
 
 }
 
@@ -69,7 +70,6 @@ ul.description_txt_1 {
     width: 100%;
     margin-top: 4%; 
 
-	
 
 }
 
@@ -421,7 +421,7 @@ a.txtover:hover #title {
 
 #frontpics {
 	max-width: 100%;
-	
+	max-height: 10%;
 	margin:0%;
 }
 
