--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,10 @@ a.txtover:hover #title {
 .newhome {
 	display: flex;
 	justify-content: center;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+
 }
 
 #title {	
@@ -423,8 +427,7 @@ a.txtover:hover #title {
 	max-width: 100%;
 	max-height: 10%;
 	margin:0%;
-	height: !important;
-	width: !important;
+
 }
 
 
