--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ a {
 img {
 	margin-right: 3%;
 	margin-bottom: 3%;
-	object-fit: cover;
+	
 
 }
 
@@ -408,7 +408,7 @@ a.txtover:hover #title {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	overflow: hidden;
 
 }
